--- a/src/client/assets/css/custom.css
+++ b/src/client/assets/css/custom.css
@@ -4434,7 +4434,7 @@ table .table-hover tbody tr:hover td {
 .slick-slide {
   display: none;
   float: left;
-  height: 100%;
+  height: 10rem;
   min-height: 1px;
 }
 
@@ -16687,11 +16687,13 @@ call-btn:focus {
 }
 
 .profile-sidebar .dashboard-menu>ul>li:hover>a {
-  color: #0de0fe;
+  /* color: #0de0fe; */
+  color: #5CEC8D;
 }
 
 .profile-sidebar .dashboard-menu>ul>li.active>a {
-  color: #0de0fe;
+  /* color: #0de0fe; */
+  color: black;
 }
 
 @media (max-width: 1199.98px) {
