--- a/src/client/components/customstyleclient.css
+++ b/src/client/components/customstyleclient.css
@@ -264,7 +264,7 @@
 .doctor-card {
     border: 1px solid #e0e0e0;
     border-radius: 10px;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
     margin-bottom: 10px;
     margin-top: 1rem;
     height: 18rem;
@@ -449,7 +449,7 @@
 
 .view-profile {
 
-    background: #b88a17;
+    background: #DBA307;
     border: none;
     border-radius: 10px;
     margin-top: 3rem;
@@ -458,7 +458,9 @@
     width: 9rem;
     cursor: pointer;
 }
-
+.slick-slide {
+    margin-right: 1rem; /* Adjust the value as needed */
+  }
 .slot-inner-div {
     display: flex;
     width: 100%;
