--- a/src/admin/assets/css/custom.css
+++ b/src/admin/assets/css/custom.css
@@ -2847,7 +2847,7 @@ a.bg-danger:focus, a.bg-danger:hover, button.bg-danger:focus, button.bg-danger:h
 }
 
 .notifications {
-  padding: 0;
+  padding: 10px;
 }
 .notifications .notification-time {
   font-size: 12px;
@@ -2908,7 +2908,7 @@ a.bg-danger:focus, a.bg-danger:hover, button.bg-danger:focus, button.bg-danger:h
 }
 
 .topnav-dropdown-header {
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid black;
   text-align: center;
 }
 .topnav-dropdown-header .notification-title {
@@ -2954,6 +2954,7 @@ a.bg-danger:focus, a.bg-danger:hover, button.bg-danger:focus, button.bg-danger:h
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-top: 10px;
 }
 
 .noti-time {
