--- a/src/client/assets/css/style-admin.css
+++ b/src/client/assets/css/style-admin.css
@@ -2227,6 +2227,7 @@ html.menu-opened body {
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	margin-top: 10px;
 }
 .notifications ul.notification-list > li{
 	margin-top: 0;
