--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -5151,7 +5151,7 @@ html.menu-opened body {
 
 .noti-nav .dropdown-menu {
   min-width: 420px;
-  padding: 0;
+  padding: 2rem;
 }
 
 .main-nav li.megamenu > ul {
