--- a/src/client/assets/css/custom.css
+++ b/src/client/assets/css/custom.css
@@ -2417,7 +2417,8 @@ chat-attachment-list,
 }
 
 .change-photo-btn {
-  background-color: #20c0f3;
+  /* background-color: #20c0f3; */
+  background: linear-gradient(180deg, rgb(94, 239, 143) 0%, rgb(0, 166, 157) 100%);
   color: #ffffff;
   cursor: pointer;
   display: block;
@@ -40417,6 +40418,7 @@ ul.benifits-col li i {
 
 .payment-form-group {
   margin-bottom: 10px;
+  flex-direction: column;
 }
 
 .payments-form .custom_radio {
