--- a/src/client/assets/css/custom1.css
+++ b/src/client/assets/css/custom1.css
@@ -12558,6 +12558,7 @@ html.menu-opened body {
 }
 
 .doc-slot-list {
+  width: 80%;
   background-color: #d9534f;
   border: 1px solid #d43f3a;
   color: #ffffff;
@@ -12565,6 +12566,8 @@ html.menu-opened body {
   margin: 10px 10px 0 0;
   padding: 6px 15px;
   border-radius: 4px;
+  display: flex;
+  justify-content:space-between;
 }
 
 .doc-slot-list a {
