--- a/src/client/components/customstyleclient.css
+++ b/src/client/components/customstyleclient.css
@@ -173,6 +173,12 @@
     justify-content: center;
     align-items: center;
 }
+.google-pay-button-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .btn-booking-card {
     width: 100%;
     height: 2.5rem;
