--- a/src/admin/assets/css/bootstrap.css
+++ b/src/admin/assets/css/bootstrap.css
@@ -3009,8 +3009,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #56D27F;
+  border-color: #56D27F;
 }
 .btn-primary:hover {
   color: #fff;
