--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -30627,8 +30627,8 @@ input:checked + .tog-slider:before {
 
 .error-404-content {
   width: 100%;
-  position: absolute;
-  bottom: 30px;
+  /* position: absolute; */
+  /* bottom: 30px; */
 }
 @media (max-width: 1399.98px) {
   .error-404-content {
