--- a/src/client/assets/css/custom1.css
+++ b/src/client/assets/css/custom1.css
@@ -17984,7 +17984,7 @@ span.call-duration.float-end {
 .doctor-img {
   -ms-flex: 0 0 150px;
   flex: 0 0 150px;
-  margin-right: 20px;
+  /* margin-right: 20px; */
   width: 150px;
 }
 
