--- a/src/admin/assets/css/custom.css
+++ b/src/admin/assets/css/custom.css
@@ -638,8 +638,8 @@ textarea.form-control {
   background-color: #f5f5f5;
 }
 .nav-tabs.nav-tabs-solid > li > a.active, .nav-tabs.nav-tabs-solid > li > a.active:hover, .nav-tabs.nav-tabs-solid > li > a.active:focus {
-  background-color: #00d0f1;
-  border-color: #00d0f1;
+  background-color: #55CE63;
+  border-color: #55CE63;
   color: #ffffff;
 }
 .nav-tabs.nav-tabs-solid.nav-tabs-rounded {
