--- a/src/client/assets/css/custom.css
+++ b/src/client/assets/css/custom.css
@@ -18085,6 +18085,7 @@ chat-attachment-list li {
   border: 1px solid #f06060;
   color: #ffffff;
   line-height: 0;
+    height: 4rem;
   border-radius: 100%;
   margin: 30px 20px 0;
   padding: 20px;
