--- a/src/client/assets/css/custom1.css
+++ b/src/client/assets/css/custom1.css
@@ -15577,6 +15577,7 @@ chat-attachment-list li {
   border: 1px solid #f06060;
   color: #ffffff;
   line-height: 0;
+  height: 4rem;
   border-radius: 100%;
   margin: 30px 20px 0;
   padding: 20px;
