--- a/src/pharmacyadmin/assets/css/style.css
+++ b/src/pharmacyadmin/assets/css/style.css
@@ -683,7 +683,7 @@ textarea.form-control {
   background-color: #f5f5f5;
 }
 .nav-tabs.nav-tabs-solid > li > a.active, .nav-tabs.nav-tabs-solid > li > a.active:hover, .nav-tabs.nav-tabs-solid > li > a.active:focus {
-  background-color: #00d0f1;
+  background-color: #466368;
   border-color: #00d0f1;
   color: #ffffff;
 }
